Fixed logo and comp name sizing . Was broken in deployment

--- a/src/App.css
+++ b/src/App.css
@@ -21,20 +21,21 @@
 
 .logoImg, .loggo {
   /* border: solid black 2px; */
-  height: 8dvh;
-  display: flex;
+  margin-left: 2%;
+  height: 40px;
+  width: 60px;
   padding:1px;
-  margin-left: -5%;
 }
 
 #CompName {
   border: solid #03045E 01px;
   height: 4dvh;
+  width: auto;
   display: flex;
   justify-content: center;
   font-size: 8px;
   font-family: cursive;
-  margin-left: -38%;
+  margin-left: 8%;
 }
 
 .welcomeHeader {
